--- a/html/stylesheets/base.css
+++ b/html/stylesheets/base.css
@@ -267,3 +267,60 @@
 	.add-bottom { margin-bottom: 20px !important; }
 
 
+/*
+	CSS WEBSITE!
+*/
+
+
+
+.topBalk
+{
+	border:none;
+
+}
+
+.logo{
+	width:547px;
+	height:90px;
+	border:none;
+}
+
+.login{
+
+border:none;
+}
+
+.menubalk{
+	background-color: #3da1d4;
+	border:1px solid #e2e2e2;
+}
+
+.menubalk a{
+	height:40px;
+	width:160px;
+	display:block;
+	float:left;
+	color:#FFF;
+	border-right: 2px solid #8fdaff;
+	text-align: center;
+	padding-top:10px;
+	text-decoration: none;
+}
+
+.menubalk a:hover{
+	height:40px;
+	width:160px;
+	background-color:#ff9000;
+}
+
+.login button{
+    background-color: #22a7ec;
+    color: #fff;
+    font-size: 15px;
+    font-weight: normal;
+    height: 32px;
+    margin-left: 7px;
+    padding-top: 5px;
+    width: 115px;
+}
+
