Update detailpagina + base.css

--- a/html/stylesheets/base.css
+++ b/html/stylesheets/base.css
@@ -267,9 +267,21 @@
 	.add-bottom { margin-bottom: 20px !important; }
 
 
+
 /*
 	CSS WEBSITE!
 */
+
+#biedingen p, hr
+{
+margin: 0;
+}
+
+#biedingen input
+{
+width:100px;
+display: inline-block;
+}
 
 
 
