--- a/html/stylesheets/style.css
+++ b/html/stylesheets/style.css
@@ -6,3 +6,8 @@ div
 
 
 img, img.scale-with-grid { outline: 0; max-width: 100%; height: auto; }
+
+#registratievelden .invoerveld{
+	border:1px solid red;
+	width:60px;
+}
