--- a/html/stylesheets/skeleton.css
+++ b/html/stylesheets/skeleton.css
@@ -21,7 +21,7 @@
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 960px; margin: 0 auto; padding: 0; }
+    .container                                  { position: relative; width: 960px; margin: 0 auto; padding: 0 0 60px; border-radius: 25px; min-height:080px;}
     .container .column,
     .container .columns                         { float: left; display: inline; margin-left: 5px; margin-right: 5px; }
     .row                                        { margin-bottom: 20px; }
