--- a/html/stylesheets/base.css
+++ b/html/stylesheets/base.css
@@ -462,7 +462,8 @@ margin-bottom: -25px;
 	background-color: #4a9ec9;
 	color: #FFF;
     	border-radius: 5px;	
-	text-align: center;		
+	text-align: center;
+	margin-top: 20px;		
 }
 
 .footer p
