--- a/html/stylesheets/style.css
+++ b/html/stylesheets/style.css
@@ -51,3 +51,15 @@ img, img.scale-with-grid { outline: 0; max-width: 100%; height: auto; }
 .verstuur{
 	margin-top: -5px;
 }
+/*Mijn Account*/
+.main {
+
+    border: 1px solid #000000;
+    border-style: solid;
+}
+.test{
+	margin-left: 5px;
+}
+.test1{
+	margin-left: 5px;
+}
