--- a/html/stylesheets/style.css
+++ b/html/stylesheets/style.css
@@ -57,9 +57,6 @@ img, img.scale-with-grid { outline: 0; max-width: 100%; height: auto; }
     border: 1px solid #000000;
     border-style: solid;
 }
-.test{
-	margin-left: 5px;
-}
-.test1{
-	margin-left: 5px;
+.mijnaccount{
+	margin-left: 20px;
 }
