--- a/html/stylesheets/base.css
+++ b/html/stylesheets/base.css
@@ -462,7 +462,8 @@ margin-bottom: -25px;
 	background-color: #4a9ec9;
 	color: #FFF;
     	border-radius: 5px;	
-	text-align: center;		
+	text-align: center;
+	margin-top:20px;		
 }
 
 .footer p
@@ -482,3 +483,24 @@ margin-bottom: -25px;
 	background-color: #FFF;
 	
 }
+
+#voorwaarden1, #voorwaarden2, #voorwaarden3
+{
+	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	padding: 5px;
+}
+
+#voorwaarden3
+{
+	margin-bottom: 15px;
+}
+
+#voorwaardenKlein button
+{
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
+
+
