--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -261,6 +261,18 @@
 		font-size: 13px;
 		color: #444; }
 
+    label.error {
+        display: inline;
+        margin-left: 5px;
+    }
+    .error {
+        color: #ff0000;
+    }
+
+    input .error {
+        margin-bottom:0px;
+    }
+
 /* #Misc
 ================================================== */
 	.remove-bottom { margin-bottom: 0 !important; }
@@ -395,14 +407,14 @@ margin-bottom: -25px;
 }
 
 .rubriekenmenu a{
-	padding-top:10px;
+	padding-top:20px;
 	margin-top:10px;
 	text-decoration: none;
 }
 
 .rubriekenmenu li{
-    background-image: url("../images/orange-arrow.png");
-    background-position: 140px 17px;
+    background-image: url("../img/orange-arrow.png");
+    background-position: 150px 25px;
     background-repeat: no-repeat;
     border-bottom: 1px solid #ff9000;
     height: 30px;
@@ -437,12 +449,10 @@ margin-bottom: -25px;
 .veilingverlopen{
 	background-color: #ffdbdb;
 	width:100%;
-	height:26px;
 }
 
 .veiling span{
 	text-align: center;
-	margin-left:57px;
 }
 
 .veiling img{
