wijzigingen m.b.t inloggen en registreren

--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -431,6 +431,9 @@ margin-bottom: -25px;
 	background-position: 140px 17px;
     background-repeat: no-repeat;
 }
+.rubriekenmenu h2 {
+    background-color: #ffffff;
+}
 /*-------------- CONTENT --------------------*/
 
 .content{
