Border & titel wijziging product

--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -503,8 +503,17 @@ margin-bottom: -25px;
     font-weight: bold;
 }
 
-#productOmschrijving {
-    margin-top: 50px;
+#productOmschrijving p {
+
+-webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	padding: 5px;  
+}
+
+#productOmschrijving 
+{
+	margin-top: 25px;
 }
 
 #advertentieFotos {
