--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -627,6 +627,22 @@ display: inline-block;
 	margin-top: -5px;
 }
 
+/*--------------- Feedback --------------------*/
+.beoordelinginput{
+	width: 110px;
+	margin-top: -15px;
+	
+}
+
+.commentaarveldlanger{
+	width: 325px;
+}
+
+.feedbackgeven{
+  	margin-top: -1px;
+  	margin-left: 30px;
+}
+
 /*--------------  FOOTER -----------------------*/
 
 .footer, .footer a
