--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -439,9 +439,9 @@ display: inline-block;
     background-position: 150px 25px;
     background-repeat: no-repeat;
     border-bottom: 1px solid #ff9000;
-    height: 30px;
-    margin-bottom: 0px;
-    padding: 10px 10px 20px 10px;
+    min-height: 25px;
+    margin-bottom: 0;
+    padding: 2px 10px 7px;
 }
 
 .rubriekenmenu li:hover{
@@ -589,7 +589,7 @@ display: inline-block;
 	width: 160px;
 }
 .datum {
-	width: 155px;
+	width: 150px !important;
 	margin-bottom:20px;
 }
 .registratiebutton {
