--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -148,7 +148,7 @@
 	  -moz-border-radius: 3px;
 	  -webkit-border-radius: 3px;
 	  border-radius: 3px;
-	  color: #444;
+	  color: #FFF;
 	  display: inline-block;
 	  font-size: 11px;
 	  font-weight: bold;
@@ -293,6 +293,7 @@ h1{
     font-size: 27px;
     line-height: 40px;
     margin-top:41px;    
+	padding-left:15px;
 }
 
 h2{
@@ -304,48 +305,43 @@ h2{
 h3{
 	font-size:17px;
 	text-align: center;
-	background-color: #ebebeb;
 }
 
 h4{
 	border-bottom: 1px solid #ff9000;
     border-top: 1px solid #ff9000;
 	margin-bottom: 10px;
-	margin-top:41px;    
+	margin-top:41px;  
+	padding-left:15px;  
 }
 
 #biedingen p, hr{
-margin: 0;
+	margin: 0;
 }
 
 #biedingen input
 {
-width:100px;
-display: inline-block;
+	width:100px;
+	display: inline-block;
 }
 
 .topBalk
 {
 	border:none;
-
 }
 
 .logo{
 	width:547px;
 	height:90px;
 	border:none;
+	margin-top:23px; 
+	padding-left:10px;
 }
 
 .login{
 	margin-top: 5px;
 	margin-bottom: 7px;
-	padding: 5px;	
-	
-}
-
-.logo
-{
-    margin-bottom: 5px;   
+	padding:5px 5px 5px 13px;	
 }
 
 .login form {
@@ -354,6 +350,10 @@ display: inline-block;
 
 .login input {
     margin-bottom: 2px;   
+}
+
+.login label{
+	width:230px;
 }
 
 .menubalk{
@@ -368,7 +368,6 @@ display: inline-block;
 	float:left;
 	color:#FFF;
 	border-right: 2px solid #8fdaff;
-	border-bottom: 2px solid #8fdaff;
 	text-align: center;
 	padding-top: 10px;
 	text-decoration: none;
@@ -417,6 +416,7 @@ display: inline-block;
 	height:41px;
 	margin-top:20px;
 	margin-bottom: -30px;
+	padding-left: 73px;	
 }
 
 .zoeken form{
@@ -431,7 +431,7 @@ display: inline-block;
 .zoeken input{
 	border:1px solid #ff9000;
 	color:#FFF;
-	margin-left:-10px;
+	margin-left:-20px;
 }
 
 
@@ -544,13 +544,12 @@ display: inline-block;
 	border: 1px solid #cacaca;
 }
 
-.veilingverlopen{
-	background-color: #ffdbdb;
+.veilingverlopen{	
 	width:100%;
 }
 
 .veilinglopen {
-    background-color: #dbdbdb;
+    background-color: #b8e3f9;
     height: 50px;
 }
 
@@ -566,28 +565,9 @@ display: inline-block;
 
 .veiling p{
 	text-align: center;
-<<<<<<< HEAD
-	margin-top:10px;
-	margin-bottom: 3px;
-=======
->>>>>>> 1dbb54f8ed533045346be695b40a1af4d615be3d
+	margin-top:5px;
+	margin-bottom: 5px;
 }
-
-/*#countdownTimer {
-    height:30px;
-    padding-top: 10px;
-    margin-top: 40px;
-    color: #ffffff;
-    background: #ff9517;
-    text-align: center;
-} 
-
-DIT DOET NIKS?!
-
-#countdownTime {
-    display: inline;
-    font-size: 18px;
-}*/
 
 .countdownkleur{
 	color:#4a9ec9;
@@ -682,17 +662,18 @@ DIT DOET NIKS?!
 }
 
 .ganaarveilingbutton{
-   background-color: #ff9517;
+    background-color: #ff9517;
     border-radius: 2px;
     float: right;
     height: 32px;
-    margin-left: 30px;
+    margin-right: 10px;
     margin-top: 1px;
     padding-top: 10px;
     text-align: center;
     width: 108px;
     text-decoration: none;
   }
+
 .button-bod{
 	margin-top:10px;
 }
@@ -777,7 +758,7 @@ h3 a{
 	height:50px;
 	background-color: #3da1d4;
 	color: #FFF;
-    border-radius: 5px;	
+    padding-left:20px;	
 	text-align: center;
     margin-top: 20px;
 }
@@ -831,13 +812,12 @@ h3 a{
 	font-weight:bold;
 }
 
-<<<<<<< HEAD
 .bread{
 	float:left;
-=======
+}
+
 .veiling input
 {
 	margin-top: 15px;
 	margin-left: 7px;
->>>>>>> e5f30436492639b76c5edbcc39197bc917645ea0
 }
