--- a/php/application/skins/css/skeleton.css
+++ b/php/application/skins/css/skeleton.css
@@ -21,9 +21,9 @@
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 960px; margin: 0 auto; padding: 0 0 60px; border-radius: 0px; min-height:080px;}
+    .container                                  { position: relative; width: 960px; margin: 0 auto; padding: 0; border-radius: 0px; min-height:080px;}
     .container .column,
-    .container .columns                         { float: left; display: inline; margin-left: 5px; margin-right: 5px; }
+    .container .columns                         { float: left; display: inline; margin-left: 0; margin-right: 5px; }
     .row                                        { margin-bottom: 20px; }
 
     /* Nested Column Classes */
