--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -230,7 +230,7 @@
 		font: 13px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #777;
 		margin: 0;
-		width: 210px;
+		width: 219px;
 		max-width: 100%;
 		display: block;
 		margin-bottom: 20px;
@@ -378,7 +378,7 @@ h4{
 	height:40px;
 	width: 186px;
 	background-color:#ff9000;
-    padding-top: 10px;
+    padding-top: 18px;
 	font-weight: bold;
 }
 
@@ -416,7 +416,7 @@ h4{
 .zoeken{
 	height:41px;
 	margin-top:20px;
-	margin-bottom: -30px;
+	margin-bottom: -http://localhost/eenmaal-andermaal/php/30px;
 	padding-left: 73px;	
 }
 
@@ -432,7 +432,7 @@ h4{
 .zoeken input{
 	border:1px solid #ff9000;
 	color:#FFF;
-	margin-left:-20px;
+	margin-left:-24px;
 }
 
 
@@ -487,7 +487,7 @@ h4{
     height: auto;
     position: absolute;
     width: 162px;
-    left: 143px;
+    left: 133px;
     margin-top: -28px;    
 }
 
