--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -342,7 +342,11 @@ h4{
 .login{
 	margin-top: 5px;
 	margin-bottom: 7px;
-	padding:5px 5px 5px 13px;	
+	padding:5px 5px 5px 13px;
+	border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 1px solid #000000;
 }
 
 .login form {
