--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -592,6 +592,24 @@ border: 1px solid #000000;
 	margin-bottom: 5px;
 }
 
+#pagenav li {
+    float: left;
+
+    background-color: #4a9ec9;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+#pagenav li a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+#pagenav p {
+    float: left;
+}
+
 .countdownkleur{
 	color:#4a9ec9;
 	font-size: 18px;
@@ -806,7 +824,13 @@ a.remove_field {
     height: 50px;
     margin-top: 91px;
     width: 200px;
-}	
+}
+
+/*------------- Foutmelding --------------------*/
+.foutmelding {
+border: 1px solid red;
+padding: 20px;
+}
 
 /*--------------  FOOTER -----------------------*/
 
